# Tolpa

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
docs/: SimulationRules.md
include/: 3DScene_Renderer.hpp  BVH.hpp  Entity.hpp  EntityFactory.hpp  EntityManager.hpp  GameObject.hpp  GameState.h  GuiManager.hpp  InputManager.hpp  KDTree.hpp  MeshPicking.hpp  NavGrid.hpp  NavigationMesh.hpp  PositionComponent.h  SceneManager.hpp  SceneRenderer.hpp  game.hpp  renderer.hpp
include/Commands/: CommandManager.hpp  CreateCityCommand.hpp  CreateHumanCommand.hpp  CreateOrcCommand.hpp  CreateOrcsTribeCommand.hpp
include/Components/: GoalComponent.hpp  LocationComponent.hpp  ModelComponent.hpp  MovementComponent.hpp  RenderComponent.hpp  RotationComponent.hpp  TerrainComponent.hpp  TransformComponent.hpp
include/Controllers/: IController.hpp  MovementController.hpp  UnitGoalController.hpp
include/ECS/: Archetype.hpp  ComponentVector.hpp  ECS.hpp  ECSTypes.hpp  System.hpp
include/Logger/: LogTypes.hpp  Logger.hpp
include/Recast/: InputGeom.h
include/UI/: ConsoleGui.hpp  GuiManager.hpp
include/UI/ConsoleCommands/: BaseConsoleCommand.hpp
resources/Scenes/: SceneInfo.txt
resources/shaders/: lighting.fs
src/: 3DScene_Renderer.cpp  BVH.cpp  CMakeLists.txt  Entity.cpp  EntityFactory.cpp  EntityManager.cpp  GameObject.cpp  GuiManager.cpp  InputManager.cpp  KDTree.cpp  MeshPicking.cpp  NavGrid.cpp  NavigationMesh.cpp  SceneManager.cpp  SceneRenderer.cpp  game.cpp  main.cpp  renderer.cpp
src/Commands/: CommandManager.cpp  CreateCityCommand.cpp  CreateHumanCommand.cpp  CreateOrcCommand.cpp  CreateOrcsTribeCommand.cpp
src/Controllers/: MovementController.cpp  UnitGoalController.cpp
src/Detour/: CMakeLists.txt
src/ECS/: CMakeLists.txt  ECS.cpp  README.md
src/Logger/: Logger.cpp
src/Recast/: CMakeLists.txt  InputGeom.cpp  MeshLoader.cpp
src/UI/: ConsoleGui.cpp  GuiManager.cpp
src/imgui/: CMakeLists.txt  imgui_demo.cpp
tests/: Archetype_test.cpp  CMakeLists.txt  ComponentVector_test.cpp  ECS_test.cpp
